add support for delete all slices for a user within a project
